[tool.poetry]
name = "gitflowbot"

# version is determined by poetry-dynamic-versioning
# cf. https://pypi.org/project/poetry-dynamic-versioning/
version = "0.0.0" # use poetry-dynamic-versioning"

description = "A tool to visualize git process choices"
authors = ["Kristoffel Pirard <kristoffel.pirard@midiagnostics.com>"]
license = "LGPL"
packages = [
    { include = "gitflowbot", from = "src" }
]

[tool.poetry.scripts]
gitflowbot = "gitflowbot.cli:run"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
dirty = true
style = "pep440"
